--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore all files in the temp directory
 temp/*
+# Lex Chat Bot code files
+Lex Chat Bot/Bot-Code
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
