--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 temp/*
 # Lex Chat Bot code files
 Lex Chat Bot/Bot-Code
+Amazon Lex/Bot-Code
 # DynamoDB code files
 DynamoDB/Code
 # Byte-compiled / optimized / DLL files
