--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip install python-dotenv
+        pip install boto3    
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
