--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 boto3
 python-dotenv
-pip install playsound  # for play game sound if you use Amazon Polly
+pip install playsound3  # for play game sound python 3.12 if you use Amazon Polly
