--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 boto3
 python-dotenv
-pip install playsound3  # for play game sound python 3.12 if you use Amazon Polly
+playsound3     # for play game sound python v3.12 if you use Amazon Polly
