--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ Amazon Lex/Bot-Code
 # DynamoDB code files
 DynamoDB/Code
 # Drawio files
-.drawio
-.drawio.bkp
+./*.drawio
+./*.drawio.bkp
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
